# spells

./: CMakeLists.txt  main.cpp  spells
